terraform/vpc/beforegoingd_apnortheast1/route_table_routes.tf
# Routes for internet gateway which will be set in public subnet
resource "aws_route" "public_igw" {
  route_table_id         = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.default.id
}

/*
# Routes for NAT gateway which will be set in private subnet
resource "aws_route" "private_nat" {
  count                  = length(var.availability_zones)
  route_table_id         = aws_route_table.private[count.index].id
  destination_cidr_block = "0.0.0.0/0"

  # If HA is enabled, route to the NAT GW in the same AZ
  # If not, route all to the single NAT GW
  nat_gateway_id = var.enable_ha_nat_gateway ? aws_nat_gateway.default[count.index].id : aws_nat_gateway.default[0].id
}
*/
